Fixed Progress selectors and label alignment

--- a/HealthAppStyle.css
+++ b/HealthAppStyle.css
@@ -79,7 +79,7 @@ main {
 
 #sex {
     padding: 8px;
-    width: 25%;
+    width: 100%;
     box-sizing: border-box;
     margin-bottom: 10px;
 }
